--- a/public/index.html
+++ b/public/index.html
@@ -34,6 +34,9 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    <header>
+      <h1>TodoApp</h1>
+    </header>
     <div id="root"></div>
     <!--
       This HTML file is a template.
